--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "postbuild": "react-snap",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -14,8 +13,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.12",
     "lenis": "^1.3.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "tailwindcss": "^4.1.11"
@@ -29,10 +28,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "react-snap": "^1.23.0",
     "vite": "^7.0.4"
   },
   "reactSnap": {
+    "source": "dist",
     "inlineCss": true,
     "puppeteerArgs": [
       "--no-sandbox",
