--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.12",
     "lenis": "^1.3.8",
     "react": "^18.3.1",
